--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/testing-library/cypress-testing-library"
+    "url": "git+https://github.com/testing-library/cypress-testing-library.git"
   },
   "bugs": {
     "url": "https://github.com/testing-library/cypress-testing-library/issues"
